--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,8 @@ table, th, td {
     border-collapse: collapse;
     padding: 10px;
     text-align: center;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 img.title{
