--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,13 @@ p.quote{
     padding-top: 1%;
     padding-bottom: 1%;
     height: max-content;
-    border-bottom: 4px solid gold;
+    border-bottom: 3px solid gold;
     background-color: #0B5584;
 }
 
 .left{
     float: left;
-    border-right: 4px solid gold;
+    border-right: 3px solid gold;
     width: 20%;
     height: 100%;
     min-height: 100%;
@@ -47,7 +47,7 @@ p.quote{
 
 .right {
     float: left;
-    border-left: 4px solid gold;
+    border-left: 3px solid gold;
     width: available;
     height: 100%;
     min-height: 100%;
@@ -63,12 +63,32 @@ p.quote{
 }
 
 li {
-    padding-bottom: 20px;
-    padding-left: 10px;
-/*    font-style: oblique;*/
+    float: left;
     font-weight: bold;
     font-family: "D Sari Bold", Calibri, sans-serif;
     font-size: 20px;
+    width: 100%;
+}
+
+ul {
+    margin: 0;
+    padding-left: 0;
+    list-style-type: none;
+    /*background-color: aliceblue;*/
+    overflow: hidden;
+}
+
+li a{
+    display: inline-block;
+    padding: 20px 40px;
+    width: 100%;
+    text-decoration: none;
+}
+
+li a:hover{
+    background-color: #0B5584;
+    color: whitesmoke;
+    width: 100%;
 }
 
 thead, tbody {
